--- a/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
+++ b/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 lastopen = 2024-06-07 00:25:40
 
 [search]
-lastsearch = 2024-08-10 21:14:04
+lastsearch = 2024-08-11 00:27:06
 
 [dreamland.vn]
 match = 18.2%%
@@ -19,7 +19,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 [demluxury.com.vn]
 match = 31.6%%
 title = Bộ chăn ga gối Cotton MOC 03 Dreamland
-url = https://demluxury.com.vn/san-pham/bo-chan-ga-goi-cotton-moc-03-dreamland/
+url = https://demluxury.com.vn/san-pham/bo-chan-ga-goi-cotton-moc-03-dreamland/?srsltid=AfmBOoorBm2HdgcTWTlVSQLGqCEn12Chq5uBtm0P__hAaCQR_kLi4KWR
 
 [www.facebook.com]
 match = -8.0%%
@@ -29,7 +29,7 @@ url = https://www.facebook.com/Dreamland.com.vn/
 [thegioidemonline.com]
 match = 62.8%%
 title = Bộ chăn ga gối Dreamland cotton lụa NK PT25
-url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-2-5.html
+url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-2-5.html?srsltid=AfmBOoo9xZ2I-yaOfvDy-CuXlztaFONjOYy1aZ-bS81xjlTKG2bLLmaZ
 
 [demdreamland.vn]
 match = 31.0%%
