--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-08-10 23:20:03
+lastsearch = 2024-08-11 00:12:29
 
 [demxanh.com]
 match = 37.0%%
@@ -14,7 +14,7 @@ url = https://demxanh.com/chieu-truc-den.html
 [demre.com.vn]
 match = 66.7%%
 title = chiếu trúc hạt đen- trắng 160x200
-url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-2
+url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200
 
 [sieuthitretho.vn]
 match = 3.7%%
@@ -42,9 +42,9 @@ title = BẢNG GIÁ Chiếu Trúc Việt Nam mới ...
 url = https://thegioidemviet.vn/chieu-truc/
 
 [www.diepxuan.com]
-match = 11.1%%
-title = Điệp Xuân Chiếu trúc trung quốc
-url = https://www.diepxuan.com/chieu-truc/chieu-truc-trung-quoc.html
+match = 63.0%%
+title = Điệp Xuân Chiếu trúc Thái đen 160x200
+url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 
 [shopee.vn]
 match = -18.5%%
