--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-08-10 21:48:22
+lastsearch = 2024-08-11 00:11:46
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -19,7 +19,7 @@ url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 [demxanh.com]
 match = -6.5%%
 title = Đệm bông ép Dreamland chống thoái hóa cột sống
-url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html?srsltid=AfmBOorMwvc2JZDX5E9Z_sAvKf54Sre0_sMoSfi2PNV-LfU_AxJnkqlc
+url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
 
 [dreamland.vn]
 match = -21.1%%
@@ -39,7 +39,7 @@ url = https://dongahome.vn/dem-lo-xo-cao-cap-hanvico-hera
 [vuanem.com]
 match = -35.5%%
 title = Để chuyện phòng the lên đỉnh, bạn nên chọn loại nệm nào?
-url = https://vuanem.com/blog/de-chuyen-phong-the-len-dinh-chon-nem-nao.html?srsltid=AfmBOoree1aZYi3Ukb7qgO_IXkObOtSvOFgIrq4yuwYiJRTP2GE112GM
+url = https://vuanem.com/blog/de-chuyen-phong-the-len-dinh-chon-nem-nao.html
 
 [uannga.vn]
 match = -19.4%%
