--- a/images/ga-phu-es1807-180x200/config.ini
+++ b/images/ga-phu-es1807-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1807-180x200.html
 lastopen = 2024-06-07 01:02:20
 
 [search]
-lastsearch = 2024-08-10 20:37:33
+lastsearch = 2024-08-11 00:13:13
 
 [everonvn.com.vn]
 match = 14.3%%
 title = Bộ Everon Es1807 - Serenity
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807?srsltid=AfmBOopjLdl4V66lvgH-yYwdYHMSnbkt5AOUTR7K6-HypZnuz9HDqZtC
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [everonhanoi.vn]
 match = -23.8%%
