--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-08-10 20:40:57
+lastsearch = 2024-08-11 00:21:08
 
 [bilystore.vn]
 match = -81.0%%
 title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-phong-ngu-na14/?srsltid=AfmBOooSJDFkfICho5h34qzC3G3nLZye6OoI0kHBIR_YcfyQOI4HhYO6
+url = https://bilystore.vn/tham-phong-ngu-na14/
 
 [shopee.vn]
 match = -95.2%%
