--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-10 20:26:17
+lastsearch = 2024-08-11 00:25:18
 
 [everonvn.com.vn]
-match = -94.4%%
-title = Bộ Everon Ep 1738 - chăn ga gối đệm Everon
-url = https://everonvn.com.vn/everon/553/bo-everon-ep-1738
+match = -11.1%%
+title = Vỏ Gối Everon Guardian Giảm Giá
+url = https://everonvn.com.vn/everon/2269/vo-goi-everon-guardian
 
 [www.lazada.vn]
 match = -133.3%%
