--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-08-11 00:45:18
+lastsearch = 2024-08-11 02:11:30
 
 [demxanh.com]
 match = 13.8%%
 title = Chăn ga gối Singapore Pyeoda Luxury 5 món
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon.html?srsltid=AfmBOordE-9RrgLM2BtE10baRBQtMwbvXBu9v95NB4stZgC32bj6U-P5
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon.html
 
 [www.khodemthanhdo.com]
 match = 52.4%%
