--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-08-11 00:12:07
+lastsearch = 2024-08-11 02:24:27
 
 [hk.linkedin.com]
 match = -123.1%%
@@ -12,9 +12,9 @@ title = Chan cocoo - Freelance (Self employed)
 url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
 
 [www.instagram.com]
-match = -38.5%%
-title = Coco Chan (@nataliecocochan)
-url = https://www.instagram.com/nataliecocochan/?hl=en
+match = -23.1%%
+title = Hoi Chan (@hoichandraws)
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.solunafineart.com]
 match = -22.2%%
