--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-11 01:15:00
+lastsearch = 2024-08-11 02:12:34
 
 [www.diepxuan.com]
-match = -14.3%%
-title = Bộ ga chun chần WarmDream 180x200 HQ - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-chun-chan-warmdream-180x200-hq.html
+match = 10.7%%
+title = Chiếu lác 90x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-lac-90x190.html
 
 [www.qcyc.ca]
 match = -53.6%%
