--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-08-10 23:38:12
+lastsearch = 2024-08-11 02:26:01
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -84,7 +84,7 @@ url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạn
 [demxanh.com]
 match = 20.8%%
 title = Chăn ga gối cotton Notag 4 món 16
-url = https://demxanh.com/chan-ga-goi-cotton-notag-4-mon-16.html?srsltid=AfmBOopzzmbO9C7bEKAfxSlE3wjAjADBiXHSXUz0OBHqYLE0b1FksmFR
+url = https://demxanh.com/chan-ga-goi-cotton-notag-4-mon-16.html
 
 [changagoibenlinda.com]
 match = -12.5%%
