--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-10 18:15:42
+lastsearch = 2024-08-11 02:27:02
 
 [everon.com.vn]
 match = 14.8%%
 title = Bộ Chăn Ga Everon EPM 22063
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/?srsltid=AfmBOopbwTexD1wJNFR9xzrs8rFgBa-wcoJYOuJjoIMNL9dtbI_7x_cA
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
 
 [everon.online]
-match = -5.0%%
-title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
-url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
+match = -50.0%%
+title = Bộ Everon EPM23062
+url = https://everon.online/products/bo-everon-epm23062
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -29,7 +29,7 @@ url = https://www.everonvn.vn/chi-tiet/everon-epm22069.html
 [demxanh.com]
 match = 30.6%%
 title = Bộ chăn ga gối Everon modal EPM22063
-url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html?srsltid=AfmBOooOt4GEvPKK30ShfFNhNUVAwzTQTjonzPm2Sc5V1uGfYk6cTEsI
+url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -42,9 +42,9 @@ title = BỘ CHĂN GA GỐI TRÀ MY KHOE HƯƠNG - EPM24063
 url = https://www.everonvni.vn/bo-chan-ga-goi-tra-my-khoe-huong-epm24063/
 
 [everonhanquoc.vn]
-match = 19.4%%
-title = Bộ Chăn ga gối Everon EPM-21067
-url = https://everonhanquoc.vn/everon/12770/bo-chan-ga-goi-everon-epm-21067
+match = 22.6%%
+title = Bộ chăn ga gối Everon EPM 22063
+url = https://everonhanquoc.vn/everon/13799/bo-chan-ga-goi-everon-epm-22063
 
 [yeshomebedding.com]
 match = 6.1%%
@@ -94,7 +94,7 @@ url = https://www.amazon.com/ask/questions/asin/B0001IWZ2W
 [everonvietnam.com]
 match = 14.8%%
 title = Bộ Chăn Ga Everon EPM 22063
-url = https://everonvietnam.com/bo-chan-ga-everon-epm-22063-2/
+url = https://everonvietnam.com/bo-chan-ga-everon-epm-22063-4/
 
 [tongdailyeveron.com.vn]
 match = -38.9%%
