--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-08-10 23:46:48
+lastsearch = 2024-08-11 02:24:36
 
 [demxanh.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [shopee.vn]
-match = -29.6%%
-title = Chiếu mây điều hòa Lidaco loại dày cực mát cho ngày hè
-url = https://shopee.vn/Chiếu-mây-điều-hòa-Lidaco-loại-dày-cực-mát-cho-ngày-hè-i.352833469.4282665950
+match = -33.3%%
+title = Chiếu điều hòa cao su non Latex Thái Lan M2T BEDDING ...
+url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-Latex-Thái-Lan-M2T-BEDDING-mềm-mịn-mát-thấm-hút-mồ-hôi-tốt-i.64675099.22244612519
 
 [foreverbedding.net]
 match = -59.3%%
