--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-10 18:58:41
+lastsearch = 2024-08-11 02:27:44
 
 [everonvn.com.vn]
 match = -133.3%%
 title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807?srsltid=AfmBOoqEKKIqoagwK6CryY6eVzL2wYVryfVSKdmtUywePkVHLFps5M-E
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807?srsltid=AfmBOorMjggrXSvMraX9Ib-LKBs2ZM8Ln1PozHivUumGLcGBMWP5-p_k
 
 [www.everonqb.com]
 match = -9.5%%
@@ -19,12 +19,12 @@ url = https://www.everonqb.com/ga-phu-epm19043-180x200.html
 [www.diepxuan.com]
 match = -19.0%%
 title = Chiếu cây HT 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-150x190.html?srsltid=AfmBOopDwW9x3QhF78tx-uuFDxo19So_dVqTifdUeXeg7qrnBgRCzELQ
+url = https://www.diepxuan.com/chieu-cay-ht-150x190.html?srsltid=AfmBOorMJoQTMrXdfsfv25Uevfa-MW6FsBTmAMY3rkWW0G0TAT_xiDGw
 
 [muathongminh.vn]
-match = -66.7%%
-title = Bộ chăn bốn mùa ga phủ vỏ gối EVERON ESM21011
-url = https://muathongminh.vn/bo-chan-bon-mua-ga-phu-vo-goi-everon-esm21011-p.1__5442067327__7352455
+match = -142.9%%
+title = Trọn bộ chăn ga gối satin poly 7 món ga phủ trần bông ...
+url = https://muathongminh.vn/tron-bo-chan-ga-goi-satin-poly-7-mon-ga-phu-tran-bong-koseul-san-hang-p.1__7418213403__16397825
 
 [beecost.vn]
 match = -176.2%%
