--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-08-11 01:45:31
+lastsearch = 2024-08-11 03:14:25
 
 [www.dem365.vn]
 match = -61.9%%
@@ -19,7 +19,7 @@ url = https://www.demgiare.net/chan-phao-poly-gia-re.html
 [shopee.vn]
 match = -85.7%%
 title = Chân cắm phao ( rẻ vô địch ), chân cắm phao câu đài màu ...
-url = https://shopee.vn/product/61795016/24261490289
+url = https://shopee.vn/Chân-cắm-phao-(-rẻ-vô-địch-)-chân-cắm-phao-câu-đài-màu-đen-i.61795016.24261490289
 
 [suongtuyet.com]
 match = 28.6%%
@@ -39,7 +39,7 @@ url = https://www.youtube.com/watch?v=ZjibqQJbDZY
 [www.lazada.vn]
 match = -76.2%%
 title = Chăn Mền Phao Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chan-men-phao/?srsltid=AfmBOop7yYOaXX37ccDM0-KCfe4oVpEA4kvipOSSj9rR1LFXaYJaTngl
+url = https://www.lazada.vn/tag/chan-men-phao/
 
 [docauquanghuy.com]
 match = -33.3%%
