--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-08-11 00:32:15
+lastsearch = 2024-08-11 03:19:36
 
 [www.everonvn.vn]
 match = 80.8%%
@@ -62,9 +62,9 @@ title = Nệm lò xo túi Everon Pocket pops 2024
 url = https://nemgiakho.com/nem-lo-xo-tui-everon-pocket-pops.html
 
 [everon.com.vn]
-match = -19.2%%
-title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt ...
-url = https://everon.com.vn/dem-lo-xo-pocket-pops/?srsltid=AfmBOopDyBSut-TJz3MmQV69lMjJBidtUL0zrgE530-sKNJFRcK9jCD_
+match = -34.6%%
+title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt Nam ...
+url = https://everon.com.vn/dem-lo-xo-pocket-pops/
 
 [demxanh.com]
 match = -19.2%%
