--- a/images/chieu-dieu-hoa-khong-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-16.html
 lastopen = 2024-06-09 22:26:33
 
 [search]
-lastsearch = 2024-08-11 02:16:23
+lastsearch = 2024-08-11 05:45:13
 
 [demxanh.com]
 match = 3.7%%
 title = Chiếu điều hòa Nhật Bản Nekio Viscose màu xanh
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-viscose-mau-xanh.html?srsltid=AfmBOorVTQ1CPAe4uoGW8Hrp37uzePsA5MrFaA4abq1l6Jxl6aYUbk4w
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-viscose-mau-xanh.html?srsltid=AfmBOorDufutttbAyTwX5HJVLwkC2zXhzKY-6ci8CHN5GVjxBPSFG68v
 
 [shopee.vn]
-match = 18.5%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = 0.0%%
+title = chiếu điều hoà giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hoà
 
 [goni.vn]
 match = 14.8%%
@@ -59,7 +59,7 @@ url = https://hc.com.vn/ords/nnews/dieu-hoa-de-16-do-khong-mat
 [www.lazada.vn]
 match = -14.8%%
 title = Chiếu Mây Điều Hòa Hàng Xuất Khẩu Cao Cấp,Đủ kích cỡ
-url = https://www.lazada.vn/products/chieu-may-soi-nho-dieu-hoa-chieu-dieu-hoa-16-x-19m-chieu-may-dieu-hoa-hang-xuat-khau-cao-capdu-kich-co-chieu-du-lich-chieu-an-com-chieu-trai-giuong-i2106465649.html?srsltid=AfmBOopLCDjKsE_VnzAxjC9C56POLF3UH2eCbE0DK7lCrlYsRfcezc26
+url = https://www.lazada.vn/products/chieu-may-soi-nho-dieu-hoa-chieu-dieu-hoa-16-x-19m-chieu-may-dieu-hoa-hang-xuat-khau-cao-capdu-kich-co-chieu-du-lich-chieu-an-com-chieu-trai-giuong-i2106465649.html?srsltid=AfmBOopgAniMtWnLH6t1pHu7eIXczYK3DhSIHWgi9QrwYWQ5gLavr2-n
 
 [phatdatbinhthoi.com.vn]
 match = -14.8%%
