--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-10 16:59:28
+lastsearch = 2024-08-11 05:36:20
 
 [www.tiktok.com]
 match = -152.9%%
@@ -17,9 +17,9 @@ title = The Bank of N.Y. Mellon v. Nev. Ass'n Serv.
 url = https://casetext.com/case/the-bank-of-ny-mellon-v-nev-assn-serv
 
 [www.reddit.com]
-match = -88.2%%
-title = This can't be true, right? : r/fuckHOA
-url = https://www.reddit.com/r/fuckHOA/comments/1d6bhas/this_cant_be_true_right/
+match = -223.5%%
+title = HOA tried to punish us - Told us to "Stop them if we can" - ...
+url = https://www.reddit.com/r/MaliciousCompliance/comments/11n6mmx/hoa_tried_to_punish_us_told_us_to_stop_them_if_we/
 
 [music.apple.com]
 match = -194.1%%
@@ -467,9 +467,9 @@ title = KHỞI NGHIỆP NGHỀ LÀM ĐẸP VÉN MÀN BÍ MẬT THÀNH ...
 url = http://dnrtv.org.vn/tin-tuc-n191999/khoi-nghiep-nghe-lam-dep-ven-man-bi-mat-thanh-cong.html
 
 [www.justice.gov]
-match = -194.1%%
-title = Department of Justice | Homepage | United States Department ...
-url = https://www.justice.gov/
+match = -105.9%%
+title = Videos | United States Department of Justice
+url = https://www.justice.gov/news/videos
 
 [www.epa.gov]
 match = -117.6%%
@@ -675,4 +675,9 @@ url = https://www.energy.gov/nnsa/articles/nuclear-weapons-life-cycle-fact-sheet
 match = 0.0%%
 title = 
 url = https://dessaules.com/blog/how-to-fight-hoa-fines
+
+[m.facebook.com]
+match = -170.6%%
+title = On Sports - 🇸🇬Singapore chính thức gia nhập nhóm có huy...
+url = https://m.facebook.com/story.php/?story_fbid=1192952698634515&id=100037593873375
 
