--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-11 05:15:28
+lastsearch = 2024-08-11 05:37:22
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -164,7 +164,7 @@ url = https://cnrk.cnic.navy.mil/
 [books.google.com]
 match = -180.0%%
 title = The Japan Daily Mail - Volume 34 - Page 194 - Google Books Result
-url = https://books.google.com/books?id=Zm0zAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+18&source=bl&ots=38NDaTuhMq&sig=ACfU3U1FBJwQqG-_gjrhPg0dYHJF98L2xw&hl=en&sa=X&ved=2ahUKEwiqs5fDpuuHAxWfE1kFHc-jPGEQ6AF6BAgZEAM
+url = https://books.google.com/books?id=Zm0zAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+18&source=bl&ots=38NDaTAlPk&sig=ACfU3U00CjHQf4K3WqDvcxxTT6Z1q53qnw&hl=en&sa=X&ved=2ahUKEwjgmZ66vuuHAxVmlIkEHanqE10Q6AF6BAghEAM
 
 [strandedonpeel.my-free.website]
 match = -45.0%%
@@ -522,9 +522,9 @@ title = 'Big Brother' Sneak Peek: Kimo Tells Tucker a Key Secret ...
 url = https://www.mycouriertribune.com/lifestyles/entertainment/big-brother-sneak-peek-kimo-tells-tucker-a-key-secret-video/article_1617f93a-04a3-5cec-9c37-a0657008888c.html
 
 [www.wdtn.com]
-match = -135.0%%
-title = Could another insurrection happen in January? This film ...
-url = https://www.wdtn.com/news/politics/ap-politics/ap-could-another-insurrection-happen-in-january-this-film-imagines-what-if/
+match = -130.0%%
+title = FBI: California woman brought sword, whip and other ...
+url = https://www.wdtn.com/news/politics/ap-politics/ap-fbi-california-woman-brought-sword-whip-and-other-weapons-into-capitol-during-jan-6-riot/
 
 [www.localsyr.com]
 match = -130.0%%
