--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-08-11 05:27:15
+lastsearch = 2024-08-11 05:39:27
 
 [demxanh.com]
-match = -131.6%%
-title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống Demxanh. ...
+match = -84.2%%
+title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống ...
 url = https://demxanh.com/tam-trang-tri-khach-san.html
 
 [thegioidemviet.vn]
