--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-08-11 05:23:05
+lastsearch = 2024-08-11 05:41:31
 
 [www.tiktok.com]
 match = -187.5%%
@@ -34,7 +34,7 @@ url = https://m.facebook.com/p/Nhu-shop-100036848391375/?locale=is_IS
 [www.diepxuan.com]
 match = 18.8%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOopE6i92Z3lK-VrF2ueZf14Q34CMxd6y34jzhGBg-v3jm_Ukn4FN
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [diepxuan.com]
 match = 6.2%%
